--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  padding-top: 100px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.form_Add_Products
+{
+  max-width: 600px;
+  margin: auto;
+}
+.card
+{
+  height: 200px;
+  margin-bottom: 2rem;
+}
+a,a:hover
+{
+  color: inherit;
+  text-decoration: none;
 }
