--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,31 @@ a,a:hover
   color: inherit;
   text-decoration: none;
 }
+.button-action{
+  outline: none;
+  border: none;
+  height: 30px;
+  width: 30px;
+  margin-right: 5px;
+  background-color: transparent;
+  border-radius:20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.danger
+{
+  background-color: #ff4136;
+  color: white;
+}
+.danger:hover{
+  background-color: #e63b31;
+}
+.secondary
+{
+  background-color: #CCC;
+  color: white;
+}
+.secondary:hover{
+  background-color: #b8b8b8;
+}
